@@ -1,3 +1,8 @@
+== Upgrading to 1.5 ==
+
+ * MySQL interface has changed to mysqli.
+   See http://oss.netshadow.at/wiki/nephthys/ChangingToMySqli for more.
+
 == Upgrading to 1.4 ==
 
  * Nothing special needs to be done.
